--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "3.2.8", features = ["derive"] }
 interfaces = { version = "0.0.8" }
 procfs = { version = "0.13.0" }
+sh1106 = { version = "0.4.0" }
+signal-hook = { version = "0.3.14" }
+embedded-graphics = { version = "0.7.1" }
+rppal = { version = "0.13.1", features = ["hal"] }
