--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 clap = { version = "3.2.11", features = ["derive"] }
 interfaces = { version = "0.0.8" }
 procfs = { version = "0.13.2" }
-sh1106 = { version = "0.4.0" }
+ssd1306 = { version = "0.7.0" }
 signal-hook = { version = "0.3.14" }
 embedded-graphics = { version = "0.7.1" }
 rppal = { version = "0.13.1", features = ["hal"] }
