--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,19 @@ edition = "2021"
 # crates.io
 clap = { version = "3.2.13", features = ["derive"] }
 rppal = { version = "0.13.1", features = ["hal"] }
-anyhow = "1.0.62"
 thiserror = "1.0.32"
 chrono = "0.4.19"
 procfs = "0.14.0"
 ssd1306 = "0.7.0"
 signal-hook = "0.3.14"
 embedded-graphics = "0.7.1"
-
+interfaces = "0.0.8"
 # git
-interfaces = { git = "https://github.com/domenicquirl/interfaces-rs", branch = "dep-and-cleanup" }
+# interfaces = { git = "https://github.com/domenicquirl/interfaces-rs", branch = "dep-and-cleanup" }
+
+[[bin]]
+name = "dsp"
+path = "src/main.rs"
 
 [profile.release]
 lto = true   # link-time-optimization
